Fix alignment of field id in the structure panel

--- a/assets/sass/panels/_structure.scss
+++ b/assets/sass/panels/_structure.scss
@@ -3,6 +3,8 @@
 	cursor: pointer;
 	position: relative;
 	max-width: 40%;
+	display: inline-flex;
+	align-items: center;
 
 	&__inner {
 		overflow: hidden;
